--- a/package.json
+++ b/package.json
@@ -4,24 +4,39 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host --port 8000",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.1",
+    "@hookform/resolvers": "^3.9.1",
+    "@mui/icons-material": "^6.3.0",
+    "@mui/material": "^6.3.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "hamburger-react": "^2.5.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-day-picker": "^9.5.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.1",
+    "react-toastify": "^11.0.2",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^3.1.0"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-redux": "^7.1.34",
+    "@types/redux-thunk": "^2.1.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
