--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hamburger-react": "^2.5.2",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-data-table-component": "^7.6.2",
     "react-day-picker": "^9.5.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
@@ -28,6 +29,7 @@
     "react-router": "^7.1.1",
     "react-toastify": "^11.0.2",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.14",
     "yup": "^1.6.1"
   },
   "devDependencies": {
